--- a/Project/src/ShoppingMenu/PT.form
+++ b/Project/src/ShoppingMenu/PT.form
@@ -194,12 +194,12 @@
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="2" rowCount="16">
                     <Column editable="true" title="item" type="java.lang.Object">
-                      <Data value="a"/>
-                      <Data value="b"/>
-                      <Data value="c"/>
-                      <Data value="d"/>
-                      <Data value="e"/>
-                      <Data value="f"/>
+                      <Data value="Secret Menu#1"/>
+                      <Data value="Secret Menu#2"/>
+                      <Data value="Secret Menu#3"/>
+                      <Data value="Secret Menu#4"/>
+                      <Data value="Secret Menu#5"/>
+                      <Data value="Secret Menu#6"/>
                       <Data value="null"/>
                       <Data value="null"/>
                       <Data value="null"/>
@@ -231,6 +231,7 @@
                     </Column>
                   </Table>
                 </Property>
+                <Property name="toolTipText" type="java.lang.String" value=""/>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
@@ -238,12 +239,15 @@
                       <Editor/>
                       <Renderer/>
                     </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
                       <Title/>
                       <Editor/>
                       <Renderer/>
                     </Column>
                   </TableColumnModel>
+                </Property>
+                <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+                  <Color id="Default Cursor"/>
                 </Property>
                 <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
                   <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
