--- a/Project/src/ShoppingMenu/PT.form
+++ b/Project/src/ShoppingMenu/PT.form
@@ -203,8 +203,8 @@
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="2" rowCount="16">
                     <Column editable="true" title="item" type="java.lang.Object">
-                      <Data value="Secret Menu#1"/>
-                      <Data value="Secret Menu#2"/>
+                      <Data value="Dog"/>
+                      <Data value="fish"/>
                       <Data value="Secret Menu#3"/>
                       <Data value="Secret Menu#4"/>
                       <Data value="Secret Menu#5"/>
