--- a/Project/src/ShoppingMenu/PT.form
+++ b/Project/src/ShoppingMenu/PT.form
@@ -241,17 +241,17 @@
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="2" rowCount="8">
-                    <Column editable="false" title="item" type="java.lang.Object">
+                    <Column editable="true" title="item" type="java.lang.Object">
                       <Data value="Dog"/>
                       <Data value="Fish"/>
                       <Data value="Chocolate bar"/>
-                      <Data value="Milk (Meji)"/>
+                      <Data value="Milk"/>
                       <Data value="Pork guts"/>
                       <Data value="Condom"/>
                       <Data value="Chicken"/>
                       <Data value="Shampoo"/>
                     </Column>
-                    <Column editable="false" title="price" type="java.lang.Object">
+                    <Column editable="true" title="price" type="java.lang.Object">
                       <Data value="1.0"/>
                       <Data value="2.0"/>
                       <Data value="15.0"/>
